--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
 <div class="footer">
   MINAT? SUNG HUBUNGI DI BAWAH ⬇<br>
-  <a class="btn-kontak" href="t.me/zannoffc">Hubungi Via Telegram</a>
+  <a class="btn-kontak" href="@zannoffc">Hubungi Via Telegram</a>
 </div>
 
   </div>
