--- a/index.html
+++ b/index.html
@@ -130,9 +130,8 @@
   </ul>
 </div>
 
-<div class="footer">
-  MINAT? SUNG HUBUNGI DI BAWAH ⬇<br>
-  <a class="btn-kontak" href="@zannoffc">Hubungi Via Telegram</a>
+<div class="btns">
+  <a href="https://t.me/zannoffc" target="_blank">💬 Hubungi via Telegram</a>
 </div>
 
   </div>
