--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       font-style: italic;
       color: #cbd5e1;
     }
-    .btn-kontak {
+    .hover {
       display: inline-block;
       margin-top: 10px;
       padding: 10px 20px;
@@ -60,7 +60,7 @@
       font-weight: bold;
       transition: background 0.3s;
     }
-    .btn-kontak:hover {
+    .btns:hover {
       background: #06b6d4;
     }
   </style>
