--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       font-weight: bold;
       transition: background 0.3s;
     }
-    .btns:hover {
+    .btn-kontak:hover {
       background: #06b6d4;
     }
   </style>
@@ -130,8 +130,9 @@
   </ul>
 </div>
 
-<div class="btns">
-  <a href="https://t.me/zannoffc" target="_blank">💬 Hubungi via Telegram</a>
+<div class="footer">
+  MINAT? SUNG HUBUNGI DI BAWAH ⬇<br>
+  <a class="btn-kontak" href="https://t.me/zannoffc">Hubungi Via Telegram</a>
 </div>
 
   </div>
