--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 </div>
 
 <div class="footer">
-  MINAT? SUNG HUBUNGI DI BAWAH ⬇<br>
+  𝐂𝐨𝐧𝐭𝐚𝐜𝐭 𝐎𝐰𝐧𝐞𝐫 𝐅𝐨𝐫 𝐎𝐫𝐝𝐞𝐫<br>
   <a class="btn-kontak" href="https://t.me/zannoffc">Hubungi Via Telegram</a>
 </div>
 
